// --- this file generated by tools, don't edit it!!!! ---
syntax = "proto3";
package pborm;
option go_package = "./pborm";

message RoleBase
{
	int64 RoleID = 1;
	int64 UserID = 2;
	string RoleName = 3;
	int64 CreateTime = 4;
	int32 Level = 5;
	int64 LoginTime = 6;
	int64 OfflineTime = 7;
	int64 UpdTime = 8;
	int32 DbStatus = 9;
}
