syntax = "proto3";
package pbserver;
option go_package = "./pbserver";

// 表数据
message NetNode
{
    int32 ZoneID = 1;
    int32 NodeType = 2;
    int32 NodeIndex = 3;
}

// 服务器节点信息
message ServerNodeInfo
{
    int32 ZoneID = 1;
    int32 NodeType = 2;
    int32 NodeIndex = 3;
}
// 服务器用玩家信息
message LogicPlayerData
{
    int64 RoleID = 1;
    string Nickname = 2;
}